# py-tgbot-template

./: .pre-commit-config.yaml  .ruff.toml  Dockerfile.jinja  README.md  pyproject.toml  renovate.json
.github/: sync.yaml
.github/workflows/: sync_files.yaml  template_sync.yaml
src/py_tgbot_template/: __init__.py
sync-config/: pyproject.toml
